--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,15 @@ jobs:
       - name: Fetch Sources
         uses: actions/checkout@v3
 
+      # Setup node
+      - name: Setup Node.js
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+      - run: npm i -g pnpm @antfu/ni
+      - run: nci
+      - run: nr build
+
       # Validate wrapper
       - name: Gradle Wrapper Validation
         uses: gradle/wrapper-validation-action@v1.0.6
