--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,15 @@ jobs:
         with:
           ref: ${{ github.event.release.tag_name }}
 
+      # Setup node
+      - name: Setup Node.js
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+      - run: npm i -g pnpm @antfu/ni
+      - run: nci
+      - run: nr build
+
       # Setup Java 11 environment for the next steps
       - name: Setup Java
         uses: actions/setup-java@v3
