--- a/.github/workflows/run-ui-tests.yml
+++ b/.github/workflows/run-ui-tests.yml
@@ -35,6 +35,15 @@ jobs:
       - name: Fetch Sources
         uses: actions/checkout@v3
 
+      # Setup node
+      - name: Setup Node.js
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+      - run: npm i -g pnpm @antfu/ni
+      - run: nci
+      - run: nr build
+
       # Setup Java 11 environment for the next steps
       - name: Setup Java
         uses: actions/setup-java@v3
