ci: update [skip ci]

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,7 +91,7 @@ jobs:
           git config user.name "GitHub Action"
 
           git checkout -b $BRANCH
-          git commit -am "Changelog update - $VERSION"
+          git commit -am "chore: changelog update - $VERSION [skip ci]"
           git push --set-upstream origin $BRANCH
           
           gh label create "$LABEL" \
@@ -99,7 +99,7 @@ jobs:
             || true
 
           gh pr create \
-            --title "Changelog update - \`$VERSION\`" \
+            --title "chore: changelog update - \`$VERSION\` [skip ci]" \
             --body "Current pull request contains patched \`CHANGELOG.md\` file for the \`$VERSION\` version." \
             --label "$LABEL" \
             --head $BRANCH
