--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,8 +87,8 @@ jobs:
           BRANCH="changelog-update-$VERSION"
           LABEL="release changelog"
 
-          git config user.email "action@github.com"
-          git config user.name "GitHub Action"
+          git config user.email "30114549+loosheng@users.noreply.github.com"
+          git config user.name "LooSheng"
 
           git checkout -b $BRANCH
           git commit -am "chore: changelog update - $VERSION [skip ci]"
