--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,9 +26,10 @@ jobs:
 
       # Setup node
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: 16
+          cache: pnpm
       - run: npm i -g pnpm@7.26.3 @antfu/ni
       - run: nci
       - run: nr build
