Revert "ci: fix syntax error"
This reverts commit 13a240f4f7dca1d47ddfa8fd8f16d965009edc32.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: 'pnpm'
+          cache: pnpm
       - run: npm i -g pnpm@7.26.3 @antfu/ni
       - run: nci
       - run: nr build
