--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "intellij-theme-vitesse",
+  "version": "0.0.1",
   "description": "",
   "author": "LooSheng",
   "license": "ISC",
@@ -14,11 +15,11 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.2",
-    "@antfu/utils": "^0.7.2",
-    "@types/node": "^16",
-    "eslint": "^8.37.0",
-    "esno": "^0.16.3",
-    "nodemon": "^2.0.22",
-    "typescript": "^5.0.2"
+    "@antfu/utils": "^0.7.6",
+    "@types/node": "^16.18.66",
+    "eslint": "^8.55.0",
+    "esno": "^4.0.0",
+    "nodemon": "^3.0.2",
+    "typescript": "^5.3.2"
   }
 }
