chore: update java to 17

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,11 +12,11 @@ pluginUntilBuild =
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IU
-platformVersion = 2022.3
+platformVersion = 2024.1
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformPlugins = com.intellij.platform.images
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.0.2
@@ -25,6 +25,6 @@ gradleVersion = 8.0.2
 # suppress inspection "UnusedProperty"
 kotlin.stdlib.default.dependency = false
 
-# Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
+# Disable Gradle Configuration Cache to avoid potential issues
 # suppress inspection "UnusedProperty"
-org.gradle.unsafe.configuration-cache = true
+org.gradle.unsafe.configuration-cache = false
